Fixed tooltip flickering problems (this closes #51)

--- a/public/css/grocy.css
+++ b/public/css/grocy.css
@@ -183,3 +183,8 @@ td {
 .typeahead .active {
 	background-color: #e5e5e5;
 }
+
+/* Third party component customizations - Popper.js */
+.tooltip {
+	pointer-events: auto;
+}
